feat: loading states

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -135,6 +135,10 @@
         @apply border-border;
     }
 
+    button {
+        @apply cursor-pointer;
+    }
+
     body {
         @apply bg-background text-foreground;
     }
